syntax = "proto3";
package user;
option go_package = "starter-boilerplate/gen/user;user";

service UserContract {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}
message GetUserRequest  { string id = 1; }
message GetUserResponse { string id = 1; string email = 2; string role = 3; }
